--- a/css/css3.css
+++ b/css/css3.css
@@ -808,7 +808,7 @@ keyframes shrink{
 	max-height: 400px;
 }
 
-.container_piece_4,.container_piece_2{
+.container_piece_4,.container_piece_5, .container_piece_6{
 	background: #f9f9f9;
 }
 
