--- a/css/css3.css
+++ b/css/css3.css
@@ -31,38 +31,45 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 }
 
 .splitter_text{
-	position: absolute;
-    top: 150px;
-    left: 0;
-    right: 0;
+	position: relative;
+    height: 45%;
+    padding-top: 150px;
+    background-color: #71C0C9;
 }
 
 .splitter_title{
 	font-size: 3rem;
 	font-weight: 300;
+	padding-bottom: 20px;
 }
 
 .splitter {
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 300px;
     font-size: 0;
-    background: #3FAB49;
+    position: relative;
+    margin: 0 auto;
+    box-shadow: 0px 1px 5px rgba(26,26,26,.2);
 }
 .resizable1, .resizable2 {
-    width: 50%;
+    width: 100%;
     height: 100%;
-    padding: 0.5em;
     background-color: coral;
-    display: inline-block;
+    position: absolute;
 }
 .resizable2 {
     background-color: lightblue;
 }
 
 .splitter_img{
-	width: 40%;
-	height: 100%;
+	width: 100%;
+	height: 55%;
 	margin: 0 auto;
+	position: relative;
+	left: 0;
+	right: 0;
+	bottom: 5%;
+	z-index: 3;
 }
 
 .left_back{
@@ -159,6 +166,61 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
     top: 0;
     right: 0;
     height: 100%;
+}
+
+.section_list{
+	padding: 0 2rem;
+	position: relative;
+}
+
+.section_list_line{
+	width: 100%;
+	height: 1px;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 50px;
+	display: block;
+	background-color: rgba(255,255,255,.2);
+}
+
+.section_list_row{
+	width: 100%;
+	display: inline-block;
+}
+
+.section_list img{
+	width: 75%;
+}
+
+.step{
+	width: 33.33333%;
+	float: left;
+	color: #999;
+	font-size: .65rem;
+	position: relative;
+}
+
+.step p{
+	padding-bottom: 30px;
+	color: #eee;
+}
+
+.step span:after{
+	content: '';
+    display: block;
+    position: absolute;
+    top: 43px;
+    left: 50%;
+    margin-left: -8px;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #aa68c3;
+    border-radius: 8px;
+    background: white;
+    -webkit-box-shadow: inset 0 0 0 3px #64008a;
+    box-shadow: inset 0 0 0 3px #64008a;
+    z-index: 3;
 }
 
 .cb_hci .section_img{
@@ -1260,7 +1322,7 @@ keyframes shrink{
 }
 
 .design_ui{
-	font-size: 1.2rem;
+	font-size: 1rem;
 	color: #777;
 	text-align: left;
 	margin: 2rem auto 0;
