--- a/css/wireframe.css
+++ b/css/wireframe.css
@@ -2,7 +2,6 @@
 	width:100%;
 	position:relative;
 	padding:50px 0 0 0;
-    background-color: rgb(238, 238, 238);
 }
 
 .wireframes .row img{
@@ -77,15 +76,19 @@
 
 .on-right-text{
 	position: absolute;
-    padding: 30px 0;
+    padding: 30px 0px 30px 15px;
     color: #fff;
     text-align: left;
     width: 50%;
-    right: 5px;
+    right: 0px;
     font-size: 12px;
 }
 
-
+.row_text h2{
+	font-size: 3rem;
+	color: #333;
+	font-weight: 300;
+}
 
 
 
