--- a/css/wireframe.css
+++ b/css/wireframe.css
@@ -1,11 +1,10 @@
 .wireframes{
 	width:100%;
 	position:relative;
-	padding:50px 0 0 0;
 }
 
 .wireframes .row img{
-	max-width: 220px;
+	max-width: 200px;
 	z-index: 1;
 }
 
@@ -16,8 +15,13 @@
     display: inline-block;
     position: relative;
     float: left;
+    padding: 10px;
+}
+.wireframe-step-box{
+    height: 100%;
     background-color: rgb(113, 192, 201);
-
+    margin: 0 20px;
+    position: relative;
 }
 
 .title{
@@ -45,26 +49,18 @@
     font-weight: 300;
     color:rgb(113, 192, 201);
     box-shadow: 0px 3px 10px rgba(0,0,0,.2);
+    top: -25px;
+    left: -25px;
 }
 
 .on-left{
 	position: absolute;
-    padding: 30px 0;
-    color: #fff;
+    color: #eee;
     text-align: left;
-    width: 50%;
+    width: 40%;
     left: 15px;
     font-size: 12px;
-}
-
-.on-right-text{
-	position: absolute;
-    padding: 30px 0px 30px 15px;
-    color: #fff;
-    text-align: left;
-    width: 50%;
-    right: 0px;
-    font-size: 12px;
+    top: 35px;
 }
 
 .row_text h2{
@@ -73,6 +69,11 @@
 	font-weight: 300;
 }
 
+.on-right{
+	position: absolute;
+	right: 5px;
+	top: 35px;
+}
 
 
 
