--- a/css/css3.css
+++ b/css/css3.css
@@ -26,14 +26,14 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	height: 100% !important;
 }
 
-.cb_seeword .part_2 .fp-tableCell{
+.cb_seeword .part_2 .fp-tableCell, .cb_seeword .part_6 .fp-tableCell{
 	display: block;
 }
 
 .splitter_text{
 	position: relative;
     height: 45%;
-    padding-top: 150px;
+    padding-top: 97px;
     background-color: #71C0C9;
 }
 
@@ -45,8 +45,8 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 }
 
 .splitter {
-    width: 400px;
-    height: 300px;
+    width: 450px;
+    height: 337px;
     font-size: 0;
     position: relative;
     margin: 0 auto;
@@ -186,7 +186,7 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	right: 0;
 	top: 50px;
 	display: block;
-	background-color: rgba(255,255,255,.2);
+	background-color: rgba(113,192,201,.3);
 }
 
 .section_list_row{
@@ -208,7 +208,7 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 
 .step p{
 	padding-bottom: 30px;
-	color: #eee;
+	color: #71C0C9;
 }
 
 .step span:after{
@@ -220,11 +220,11 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
     margin-left: -8px;
     width: 16px;
     height: 16px;
-    border: 1px solid #aa68c3;
+    border: 1px solid #6bccd7;
     border-radius: 8px;
     background: white;
-    -webkit-box-shadow: inset 0 0 0 3px #64008a;
-    box-shadow: inset 0 0 0 3px #64008a;
+    -webkit-box-shadow: inset 0 0 0 3px #71C0C9;
+    box-shadow: inset 0 0 0 3px #71C0C9;
     z-index: 3;
 }
 
@@ -1426,6 +1426,7 @@ keyframes shrink{
 	display: block;
 	height: auto;
 	margin: 0 auto;
+	padding-top: 20px;
 }
 
 .design_img_box{
