--- a/css/wireframe.css
+++ b/css/wireframe.css
@@ -15,7 +15,7 @@
     display: inline-block;
     position: relative;
     float: left;
-    padding: 10px;
+    padding: 15px;
 }
 .wireframe-step-box{
     height: 100%;
@@ -49,8 +49,8 @@
     font-weight: 300;
     color:rgb(113, 192, 201);
     box-shadow: 0px 3px 10px rgba(0,0,0,.2);
-    top: -25px;
-    left: -25px;
+    top: -40px;
+    left: 15px;
 }
 
 .on-left{
@@ -60,13 +60,21 @@
     width: 40%;
     left: 15px;
     font-size: 12px;
-    top: 35px;
+    top: 25px;
 }
 
 .on-right{
 	position: absolute;
 	right: 5px;
-	top: 35px;
+	top: 25px;
+}
+
+#draggable{
+	background-color: #fff;
+    left: 200px;
+    top: 143px;
+    border-radius: 50%;
+	box-shadow:0 0 2px 0 rgba(0,0,0,0.2),0 5px 12px 0 rgba(100,100,100,0.44);
 }
 
 
