--- a/css/css3.css
+++ b/css/css3.css
@@ -4,6 +4,7 @@ a{text-decoration: none; color: #333;}
 a,input,textarea,button{
 	outline: none;
 }
+
 /*header.css
 box-shadow:0 0 30px 0 rgba(0,0,0,0.2),0 10px 10px 0 rgba(0,0,0,0.24)}
 */
@@ -69,8 +70,13 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	position: relative;
 	left: 0;
 	right: 0;
-	bottom: 5%;
+	bottom: -400px;
 	z-index: 3;
+	opacity: 0;
+    -webkit-transition:all 1s cubic-bezier(0.05,1.1,0.75,1);
+	-moz-transition:all 1s cubic-bezier(0.05,1.1,0.75,1);
+	-o-transition:all 1s cubic-bezier(0.05,1.1,0.75,1);
+	transition:all 1s cubic-bezier(0.05,1.1,0.75,1);
 }
 
 .left_back{
@@ -165,25 +171,14 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	transition:all 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000);
 }
 
-.section_bg_img{
-	height: 100%;
-    -webkit-transition:all 1.2s cubic-bezier(0.05,1.1,0.75,1);
-	-moz-transition:all 1.2s cubic-bezier(0.05,1.1,0.75,1);
-	-o-transition:all 1.2s cubic-bezier(0.05,1.1,0.75,1);
-	transition:all 1.2s cubic-bezier(0.05,1.1,0.75,1);
-}
-
-
-
-.fp-viewing-page2 .section_img .section_bg_img{
-	right: 0;
-}
-
-.section_bg_img{
-	width: 100%;
-    height: 100%;
-    position: absolute;
+.section_bg_img_1{
     right: -300px;
+}
+
+.section_bg_img_2{
+    background:url(../img/seeword2.png) no-repeat;
+    background-size:0%;
+    background-position:50% 55%;
 }
 
 .section_img{
@@ -194,6 +189,31 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
     height: 100%;
     display: -webkit-box;
 }
+
+.section_bg_img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-transition:all 1s .3s cubic-bezier(0.05,1,0.75,1);
+	-moz-transition:all 1s .3s cubic-bezier(0.05,1,0.75,1);
+	-o-transition:all 1s .3s cubic-bezier(0.05,1,0.75,1);
+	transition:all 1s .3s cubic-bezier(0.05,1,0.75,1);
+}
+
+/*animation for see word*/
+.fp-viewing-page2 .section_img .section_bg_img_1{
+	right: 0;
+}
+
+.fp-viewing-page4 .section_img .section_bg_img_2{
+	background-size:90%;
+}
+
+.fp-viewing-page3 .splitter_img{
+	bottom: 30px;
+	opacity: 1;
+}
+
 
 .section_list{
 	padding: 0 2rem;
@@ -226,6 +246,26 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 	color: #999;
 	font-size: .65rem;
 	position: relative;
+	top: 20px;
+	opacity: .2;
+	-webkit-transition:all 1s .4s ease-out;
+	-moz-transition:all 1s .4s ease-out;
+	-o-transition:all 1s .4s ease-out;
+	transition:all 1s .4s ease-out;
+}
+.step:first-child{
+    -webkit-animation-delay: .2s;
+    transition-delay:.2s;
+}
+.step:last-child{
+    -webkit-animation-delay: .6s;
+    transition-delay:.6s;
+}
+
+
+.fp-viewing-page5 .section_list .section_list_row .step{
+	top: 0px;
+	opacity: 1;
 }
 
 .step p{
