--- a/css/css3.css
+++ b/css/css3.css
@@ -8,7 +8,7 @@ a,input,textarea,button{
 /*header.css
 box-shadow:0 0 30px 0 rgba(0,0,0,0.2),0 10px 10px 0 rgba(0,0,0,0.24)}
 */
-body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-family: 'Open Sans', sans-serif; letter-spacing: .5px;}
+body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-family: 'Open Sans', sans-serif; letter-spacing: .5px;}
 .header{
 	height: 97px;
 	position: fixed;
@@ -33,14 +33,14 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 
 .splitter_text{
 	position: relative;
-    height: 45%;
-    padding-top: 150px;
+    height: 300px;
+    padding-top: 120px;
     background-color: #71C0C9;
 }
 
 .splitter_title{
-	font-size: 3rem;
-	font-weight: 300;
+	font-size: 2.5rem;
+	font-weight: 700;
 	padding-bottom: 20px;
 	color: #fff;
 }
@@ -52,15 +52,6 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
     position: relative;
     margin: 0 auto;
     box-shadow: 0px 1px 5px rgba(26,26,26,.2);
-}
-.resizable1, .resizable2 {
-    width: 100%;
-    height: 100%;
-    background-color: coral;
-    position: absolute;
-}
-.resizable2 {
-    background-color: lightblue;
 }
 
 .splitter_img{
@@ -210,7 +201,7 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 }
 
 .fp-viewing-page3 .splitter_img{
-	bottom: 30px;
+	bottom: -50px;
 	opacity: 1;
 }
 
@@ -237,7 +228,7 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 }
 
 .section_list img{
-	width: 75%;
+	width: 80%;
 }
 
 .step{
@@ -291,9 +282,9 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 }
 
 .cb_hci .section_img{
-	width: 45%;
+	width: 70%;
+	background: #f2f2f5;
 }
-
 
 .section_text{
 	width: 40%;
@@ -353,7 +344,7 @@ body{font-size: 14px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 }
 
 .seeword_logo_img{
-	background: url(../img/seeword_logo.png) 50% 50% no-repeat;
+	background: url(../img/logo.png) 50% 50% no-repeat;
 	background-size: 70%;
 }
 
@@ -1322,8 +1313,8 @@ keyframes shrink{
 }
 
 .title_inside{
-	font-size: 2rem;
-	font-weight: 400;
+	font-size: 2.5rem;
+	font-weight: 700;
 	text-align: left;
 	line-height: 1.2;
 	letter-spacing:-.01818182em;
@@ -1387,9 +1378,9 @@ keyframes shrink{
 }
 
 .design_ui{
-	font-size: 1.4rem;
-	color: #1a2b44;
-	font-weight: 300;
+	font-size: 1.25rem;
+	color: #777;
+	font-weight: 200;
 	text-align: left;
 	margin: 2rem auto 0;
 }
@@ -1414,9 +1405,10 @@ keyframes shrink{
 }
 
 .row_text h2{
-	font-size: 3rem;
+	font-size: 2.5rem;
 	color: #333;
-	font-weight: 300;
+	font-weight: 700;
+	padding-bottom: 20px;
 }
 
 .design_title_left{
@@ -1483,11 +1475,10 @@ keyframes shrink{
 }
 
 .design_img_b{
-	width: 90%;
+	width: 85%;
 	display: block;
 	height: auto;
 	margin: 0 auto;
-	padding-top: 20px;
 }
 
 .design_img_box{
