--- a/css/css3.css
+++ b/css/css3.css
@@ -283,7 +283,7 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 
 .cb_hci .section_img{
 	width: 70%;
-	background: #f2f2f5;
+	background: #258de8;
 }
 
 .section_text{
